[gd_scene load_steps=13 format=3 uid="uid://bossknight123"]

[ext_resource type="Script" path="res://Enemy/boss.gd" id="1_boss"]
[ext_resource type="Texture2D" uid="uid://blpjl8raquq2s" path="res://Textures/Enemy/juggernaut.png" id="2_boss"]
[ext_resource type="PackedScene" uid="uid://xy3cvpwdy828" path="res://Utility/hurt_box.tscn" id="3_hurt"]
[ext_resource type="PackedScene" uid="uid://uhr6mtuisqm1" path="res://Utility/hit_box.tscn" id="4_hit"]
[ext_resource type="AudioStream" uid="uid://bi7t7cjthnhhc" path="res://Audio/SoundEffect/enemy_hit.ogg" id="5_sound"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_boss"]
radius = 6.0
height = 20.0

[sub_resource type="Animation" id="Animation_walk"]
resource_name = "walk"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_boss"]
_data = {
"walk": SubResource("Animation_walk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hurt"]
size = Vector2(40, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hit"]
size = Vector2(30, 35)

[sub_resource type="CircleShape2D" id="CircleShape2D_area"]
radius = 80.0

[node name="boss_knight" type="CharacterBody2D" groups=["boss"]]
collision_layer = 5
collision_mask = 5
motion_mode = 1
script = ExtResource("1_boss")
movement_speed = 15.0
hp = 500
max_hp = 500
knockback_recovery = 5.0
experience = 25
enemy_damage = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_boss")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 5)
shape = SubResource("CapsuleShape2D_boss")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_boss")
}

[node name="HurtBox" parent="." instance=ExtResource("3_hurt")]
collision_mask = 4
HurtBoxType = 1

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_hurt")

[node name="HitBox" parent="." instance=ExtResource("4_hit")]
collision_layer = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2(1, 3)
shape = SubResource("RectangleShape2D_hit")

[node name="AreaAttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaAttackArea"]
shape = SubResource("CircleShape2D_area")

[node name="snd_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_sound")
volume_db = -15.0

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="HurtBox"]
[editable path="HitBox"]
